Fix: header overflow on Pad

--- a/src/assets/scss/_spotlight.scss
+++ b/src/assets/scss/_spotlight.scss
@@ -6,7 +6,7 @@
     height: 100%;
     position: relative;
 
-    @media screen and (max-width: 650px) {
+    @media screen and (max-width: 900px) {
       height: auto;
     }
 
